crates/ruau/tests/compile/async_any_userdata_method.stderr
error[E0282]: type annotations needed
  --> tests/compile/async_any_userdata_method.rs:9:39
   |
 9 |         reg.add_async_method("t", |_, this, ()| async {
   |                                       ^^^^
10 |             s = &*this;
   |                  ----- type must be known at this point
   |
help: consider giving this closure parameter an explicit type
   |
 9 |         reg.add_async_method("t", |_, this: /* Type */, ()| async {
   |                                           ++++++++++++
